bug 263053: Get rid of the <endnote> tag when parsing fragments with context, since this can fail if the input stream contains another <endnote> tag. Instead, parse the context in different "chunks" from the new buffer, and notify the fragment sink by way of functions. r=peterv sr=bzbarsky